--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,8 @@
     </header>
 
     <main>
+        <img src="static/img/logo.png" alt="" id="logo">
+        <h1>HTML5 Starter</h1>
     </main>
 
     <footer>
