--- a/{{cookiecutter.project_name}}/src/index.html
+++ b/{{cookiecutter.project_name}}/src/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="charset" content="UTF-8">
-    <title>HTML5 Starter</title>
-    <meta name="description" content="HTML5 Starter">
-    <meta name="keywords" content="HTML5 Starter">
-    <meta name="copyright" content="Copyright © 2017 Asif Mahmud Shimon">
-    <meta name="author" content="Asif Mahmud Shimon">
-    <meta name="designer" content="Asif Mahmud Shimon">
-    <meta name="email" content="ams.eee09@gmail.com">
+    <title>{{cookiecutter.project_name}}</title>
+    <meta name="description" content="{{cookiecutter.project_description}}">
+    <meta name="keywords" content="{{cookiecutter.project_name}}, {{cookiecutter.project_description}}">
+    <meta name="copyright" content="Copyright © 2017 {{cookiecutter.author}}">
+    <meta name="author" content="{{cookiecutter.author}}">
+    <meta name="designer" content="{{cookiecutter.author}}">
+    <meta name="email" content="{{cookiecutter.email}}">
     <meta name="robots" content="index, follow">
     <meta name="googlebot" content="index, follow">
     <meta name="Revisit-after" content="1 Day">
