--- a/{{cookiecutter.project_name}}/src/index.html
+++ b/{{cookiecutter.project_name}}/src/index.html
@@ -21,11 +21,11 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="shortcut icon" type="image/ico" href="favicon.ico">
     <!-- Place favicon.ico in the root directory -->
 
-    <link rel="stylesheet" href="dist/css/style.min.css">
+    <link rel="stylesheet" href="/dist/css/style.min.css">
 </head>
 <body>
     <!--[if lt IE 8]>
@@ -36,14 +36,14 @@
     </header>
 
     <main>
-        <img src="static/img/logo.png" alt="" id="logo">
+        <img src="/static/img/logo.png" alt="" id="logo">
         <h1>HTML5 Starter</h1>
     </main>
 
     <footer>
     </footer>
 
-    <script src="dist/js/main.min.js"></script>
+    <script src="/dist/js/main.min.js"></script>
     <script>
       <!-- Use your analytics id in UA-XXXXXXXX-X -->
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
